# controllers/admin.go
@@ -100,7 +100,7 @@ func (u *AdminController) AdminLogin() {
 
 	getDefaultRole := models.GetRoleFromID(user.ID)
 	getRoles := models.AssociateRoleUser(getDefaultRole, user)
-	tokenString := models.GetTokenString(username)
+	tokenString := models.GetToken(user)
 	response := models.APIResponse(code, getRoles, tokenString)
 	u.Data["json"] = response
 
